@@ -699,4 +699,5 @@ table.insert(tests, "fail_cleanly_when__MTN_format_corrupt")
 table.insert(tests, "add_ignores__MTN")
 table.insert(tests, "missing_empty_dir")
 table.insert(tests, "checkout_clobbers_workspace")
+table.insert(tests, "update_clobbers_workspace")
 
