@@ -1,3 +1,9 @@
+2006-12-28  Derek Scherger  <derek@echologic.com>
+
+	* tests/update_clobbers_workspace/__driver__.lua: new test to
+	see how update handles various workspace conflicts
+	* testsuite.lua: call it
+
 2006-12-28  Richard Levitte  <richard@levitte.org>
 
 	* examples/mirror.rc: An incomplete example specification for
